<resources>
    <string name="app_name">Fisher_Hanbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fish">Рыба</string>
    <string name="na">Наживка</string>
    <string name="na1">Текст</string>
    <string name="na2">Текст</string>
    <string name="na3">Текст</string>
    <string name="sna">Снасти</string>
    <string name="sna1">Текст</string>
    <string name="sna2">Текст</string>
    <string name="sna3">Текст</string>
    <string name="pri">Прикормка</string>
    <string name="pri1">Текст</string>
    <string name="pri2">Текст</string>
    <string name="pri3">Текст</string>
    <string name="nav_subtitle">Разное</string>
    <string name="history">Рыбацкие истории</string>
    <string name="history1">Текст</string>
    <string name="history2">Текст</string>
    <string name="history3">Текст</string>
    <string name="advice">Полезные советы</string>
    <string name="advice1">Текст</string>
    <string name="advice2">Текст</string>
    <string name="advice3">Текст</string>
    <string name="fish1">Список 1 рыбы</string>
    <string name="fish2">Список 2 рыбы</string>
    <string name="fish3">Обыкнове́нный сом, или европе́йский сом (лат. Silurus glanis) — крупная пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).

Длина тела до 5 м, масса до 400 кг (по историческим данным). Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере. Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг. Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.

Окрас в большинстве случаев бурый с оттенками коричнево-зелёного, брюхо белое. В зависимости от мест обитания окрас может меняться от почти чёрного до светло-жёлтого. Иногда встречаются сомы альбиносы.

Обитает в реках и озёрах Европы и Европейской части России, кроме бассейна Ледовитого океана. Обычен в Европе и в бассейне Аральского моря.

Икрометание весной в прибрежной зоне среди водной растительности. Самка откладывает икру в гнездо, которое самец охраняет. Половозрелость обычно на пятом году жизни.
    Существует заблуждение, что сом питается только падалью . На самом деле это не совсем так. Основной пищей сома на ранней стадии развития являются мелкие ракообразные, мальки и водные насекомые. В более зрелом возрасте, в зависимости от кормовой базы, предпочитает в рационе живую рыбу и других пресноводных животных и моллюсков. Также известны случаи нападения на водоплавающих птиц и мелких домашних животных.


Сом-альбинос (в центре)
Активный ночной хищник. Днём предпочитает отлёживаться на ямах, в коряжнике и прочих «крепких местах».

Перед ледоставом собирается на ямах в небольшие группы от 5 до 10 особей. Зимой не питается и практически неактивен.Сома издавна употребляли в пищу, преимущественно в жареном виде, хотя В. И. Даль в книге «О поверьях, суевериях и предрассудках русского народа» (1845—1846) утверждал, что крестьяне южнорусских губерний и донские казаки его мясом брезговали, называя «чёртовым конём», используя лишь жирный хвост в качестве начинки для пироговю Обитает в реках и озёрах Европы и Европейской части России, кроме бассейна Ледовитого океана. Обычен в Европе и в бассейне Аральского моря.

Икрометание весной в прибрежной зоне среди водной растительности. Самка откладывает икру в гнездо, которое самец охраняет. Половозрелость обычно на пятом году жизни.</string>
    <string name="fish4">Список 4 рыбы</string>
    <string name="fish5">Список 5 рыбы</string>
    <string name="menu_home" />
    <string name="menu_gallery" />
    <string name="menu_slideshow" />
    <string name="todo">TODO</string>
    <string name="button_start">START</string>


</resources>