<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_fish"
            android:icon="@drawable/ic_galjoen"
            android:title="@string/fish" />
        <item
            android:id="@+id/id_na"
            android:icon="@drawable/ic_bait"
            android:title="@string/na" />
        <item
            android:id="@+id/id_sna"
            android:icon="@drawable/ic_fishing_rod"
            android:title="@string/sna" />
        <item
            android:id="@+id/id_pri"
            android:icon="@drawable/ic_tackle_box"
            android:title="@string/pri" />


    </group>

    <item android:title="@string/nav_subtitle">
        <menu>


            <item
                android:id="@+id/id_history"
                android:icon="@drawable/ic_storytelling"
                android:title="@string/history" />
            <item
                android:id="@+id/id_advice"
                android:icon="@drawable/ic_chat"
                android:title="@string/advice" />


        </menu>
    </item>
</menu>
